updated agreements and accept agreement apis
